correcciones merge